quinta-feira, 14 setembro
próximo passo: configurar tamanho do iframe na tela

--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
     <main>
         <section name="celular" id="celular">
-        
+            <iframe src="pags/pag001.html" name="tela" id="tela" ></iframe>
         </section>
 
-        <section name="tela" id="tela">
+        <section name="click" id="click">
 
         </section>
     </main>
