adicionado os botões e as telas
próximas tarefas:
Configurar cada pagina
configurar os botões
arrumar uma maneira de colocar a imagem inteira na tela e uma barra de rolagem para ir descendo.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,15 @@
 <body>
     <main>
         <section name="celular" id="celular">
-            <iframe src="pags/pag001.html" name="tela" id="tela" ></iframe>
+            <iframe src="pags/home.html" name="tela" id="tela" ></iframe>
         </section>
 
         <section name="click" id="click">
-
+            <a href="pags/home.html" target="tela" rel="noopener noreferrer"><img src="imagens/logo-home.jpg" alt="instagram"></a>
+            <a href="pags/instagram.html" target="tela" rel="noopener noreferrer"><img src="imagens/logo-instagram.jpg" alt="instagram"></a>
+            <a href="pags/github.html" target="tela" rel="noopener noreferrer"><img src="imagens/logo-github.jpg" alt="instagram"></a>
+            <a href="pags/twitter.html" target="tela" rel="noopener noreferrer"><img src="imagens/logo-twitter.jpg" alt="instagram"></a>
+            <a href="pags/facebook.html" target="tela" rel="noopener noreferrer"><img src="imagens/logo-facebook.jpg" alt="instagram"></a>
         </section>
     </main>
 </body>
