--- a/pags/github.html
+++ b/pags/github.html
@@ -14,9 +14,11 @@
     }
 
     body{
-        background-image: url(../imagens/tela-home.jpg);
-        
+        background-image: url(../imagens/tela-github.jpg);
+        background-size: cover;  
         background-repeat: no-repeat;
+        overflow-y: scroll;
+        overflow-x: hidden  ;
     }
 
 </style>
