finalização dos botões laterais

--- a/pags/instagram.html
+++ b/pags/instagram.html
@@ -10,21 +10,15 @@
         margin: 0px;
         padding: 0px;
         width: 100vw;
-        height: 100vh;
     }
 
-    body{
-        background-image: url(../imagens/tela-instagram.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
-        overflow: scroll;
-        overflow-x: hidden;
-
-
+    ::-webkit-scrollbar{
+        height: 0px;
+        width: 0px;
     }
 
 </style>
 <body>
-    
+    <img src="../imagens/tela-instagram.jpg" alt="youtube">
 </body>
 </html>
