--- a/pags/github.html
+++ b/pags/github.html
@@ -10,19 +10,15 @@
         margin: 0px;
         padding: 0px;
         width: 100vw;
-        height: 100vh;
     }
 
-    body{
-        background-image: url(../imagens/tela-github.jpg);
-        background-size: cover;  
-        background-repeat: no-repeat;
-        overflow-y: scroll;
-        overflow-x: hidden  ;
+    ::-webkit-scrollbar{
+        height: 0px;
+        width: 0px;
     }
 
 </style>
 <body>
-    
+    <img src="../imagens/tela-github.jpg" alt="youtube">
 </body>
 </html>
