--- a/pags/twitter.html
+++ b/pags/twitter.html
@@ -10,17 +10,15 @@
         margin: 0px;
         padding: 0px;
         width: 100vw;
-        height: 100vh;
     }
 
-    body{
-        background-image: url(../imagens/tela-home.jpg);
-        background-size: cover;
-        background-repeat: no-repeat;
+    ::-webkit-scrollbar{
+        height: 0px;
+        width: 0px;
     }
 
 </style>
 <body>
-    
+    <img src="../imagens/tela-twitter.jpg" alt="youtube">
 </body>
 </html>
