--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
 
         <section name="click" id="click">
 
-            <a href="pags/home.html" target="tela" rel="noopener noreferrer"><img src="imagens/logo-home.jpg" 
-            alt="home"></a><br>
+            <a href="pags/home.html" target="tela" rel="noopener noreferrer"><img src="imagens/logo-home.jpg" alt="home"></a><br>
             
             <a href="pags/youtube.html" target="tela" rel="noopener noreferrer"><img src="imagens/logo-youtube.jpg" alt="youtube"></a><br>
             
